final commit align resolve

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 /* CSS Document */
 
+
+/*  GLOBAL STYLES  */
+
+html {
+	margin: auto;
+	
+}
+
 body {
 	font-family: Helvetica, Univers, Futura;
 	font-size: 22px;
@@ -8,19 +16,29 @@ body {
 	background-color: black;
 	opacity: 0.9;
 	text-align: center;
-	width: 1200px;
+	width: 100%;
 	margin: 10px;
-/*	display: flex; */
+	align-content: center;
+	align-items: center;
+	justify-content: center;
 }
 
-/*  GLOBAL STYLES  */
+.content {
+	width: 100%;
+	align-content: center;
+	align-items: center;
+}
 
 .main {
 	display: inline-block;
 	padding-top: 62px;
 	justify-content: center;
-	max-width: 1200px;
+	width: 1200px;
+	align-content: center;
+	align-items: center;
 }
+
+
 
 /* NAV BAR */
 
@@ -61,6 +79,8 @@ body {
 
 }
 
+
+
 /* LANDING PAGE */
 
 .landing {
@@ -87,15 +107,37 @@ body {
 }
 
 
+
+
 /*  TEA OF THE MONTH  */
 
-.titles2{
+.teapage {
+	width: 1000px;
+	height: auto;
+/*	display: inline-flex; */
+	align-items: center;
+	padding-bottom: 10px;
+}
+
+.titles2 {
 	display: flex;
 	flex-direction: column;
 	width: 1200px;
 	height: auto;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
+	margin: 0px;
+	padding-top: 40px;
+}
+
+.teapage h2 {
+	padding: 10px;
+	margin: 0px;
+}
+
+.teapage h4 {
+	padding: 10px;
+	margin: 0px;
 }
 
 /*.month {
@@ -108,20 +150,11 @@ body {
 } */
 
 
-/*  TEA PAGE */
-
-.teapage {
-	width: 1000px;
-	height: auto;
-/*	display: inline-flex; */
-	align-items: center;
-}
-
-.teapage titles2 {
+/*.teapage titles2 {
 	width: 100%;
 	flex-basis: 100%;
 	flex-wrap: wrap;
-}
+} */
 
 .article img {
 	width: 300px;
@@ -133,7 +166,7 @@ body {
 
 *.articles {
 	display: flex;
-	width: 100%;
+	width: 1200px;
 	height: auto;
 	align-items: center;
 	justify-content: center;
@@ -150,6 +183,9 @@ body {
 	padding: 0px;
 	margin: 10px;
 }
+
+
+
 
 /*  LOCATIONS */
 
@@ -200,12 +236,18 @@ body {
 	margin-bottom: 10px;
 }
 
+
+
+
 /*  FOOTER  */
 
 .footer {
+	width: 100%;
 	height: 200px;
 	padding: 0px;
 	margin: 0px;
+	text-align: center;
+	align-items: center;
 }
 
 .copyright {
